# swiplserver

./: Backlog.txt  BuildingAndTesting.md  FutureFeatures.txt  README.md  setup.cfg  test_prologserver.py
docs/language_server/: language_server.html  language_server_overview_doc.html
docs/swiplserver/: prologserver.html
language_server/: language_server.pl  language_server_overview_doc.pl  test_language_server.pl
swiplserver/: __init__.py  language_server.pl  prologserver.py  test_prologserver.py
swiplserver/docs/: language_server.html
