[metadata]
name = swiplserver
version = 0.9.0
author = Eric Zinda
author_email = ericz@inductorsoftware.com
description = swiplserver is a module that integrates SWI Prolog with Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EricZinda/swiplserver
project_urls =
    Bug Tracker = https://github.com/EricZinda/swiplserver/issues
    Documentation = https://blog.inductorsoftware.com/swiplserver/swiplserver/prologserver.html
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = swiplserver
python_requires = >=3.7
